# nullbyte-lm

./: .gitignore  README.md  Step_by_Step.md  inventory_script.py  mise.toml  organize.sh  pyproject.toml  repo_inventory.txt
.github/: copilot-instructions.md
01_tokenizer/: README.md  TOKENIZER_DEEPDIVE.md  test_tokenizer.py
01_tokenizer/artifacts/: shakespeare_full_tok.merges.txt  shakespeare_full_tok.vocab.json  shakespeare_full_tok_10k.merges.txt  shakespeare_full_tok_10k.vocab.json  shakespeare_tok.merges.txt  shakespeare_tok.vocab.json  tinystories_tok_32k.merges.txt  tinystories_tok_32k.vocab.json  tinystories_tok_compact.merges.txt  tinystories_tok_compact.vocab.json
01_tokenizer/scripts/: compare_vocabs.py  create_sampler.py  inspect_sample.py  train_shakespeare_10k.py  train_shakespeare_5k.py
02_data_pipeline/: DATA_PIPELINE_DEEPDIVE.md  README.md
02_data_pipeline/scripts/: compact_tokenizer.py  sample_1mb.py  tokenize_corpus.py  train_tinystories_tokenizer.py
03_model/: README.md  TRANSFORMER_DEEPDIVE.md  test_attention.py  test_block.py  test_model.py  test_rmsnorm.py  test_rope.py  test_swiglu.py
04_training/: README.md  train.py
05_inference/: INFERENCE_DEEPDIVE.md  README.md  generate.py
src/cs336_workspace/: attention.py  batching.py  block.py  model.py  rmsnorm.py  rope.py  swiglu.py  tokenizer.py
